# hypokrates

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  server.json
.github/: FUNDING.yml
.github/workflows/: publish.yml  tests.yml
datasus/: __init__.py
docs/: changelog.md  index.md  quickstart.md
docs/api/: cross.md  evidence.md  faers.md  pubmed.md  scan.md  stats.md  vocab.md
docs/concepts/: hypothesis.md  signal-detection.md
docs/guides/: async.md  configuration.md  errors.md
docs/sources/: anvisa.md  canada.md  dailymed.md  drugbank.md  faers.md  index.md  onsides.md  opentargets.md  pharmgkb.md  pubmed.md  trials.md
drugbank/: __init__.py
gbd/: __init__.py
hypokrates/: __init__.py  cli.py  config.py  constants.py  exceptions.py  models.py  sync.py
hypokrates/anvisa/: __init__.py  api.py  constants.py  downloader.py  models.py  parser.py  store.py
hypokrates/cache/: __init__.py  duckdb_store.py  keys.py  migrations.py  policies.py
hypokrates/canada/: __init__.py  api.py  constants.py  downloader.py  models.py  parser.py  store.py
hypokrates/chembl/: __init__.py  api.py  client.py  constants.py  models.py  parser.py
hypokrates/contracts/: __init__.py  protocols.py
hypokrates/cross/: __init__.py  api.py  constants.py  investigate.py  models.py  report.py
hypokrates/dailymed/: __init__.py  api.py  client.py  constants.py  models.py  parser.py
hypokrates/download/: __init__.py  base.py
hypokrates/drugbank/: __init__.py  api.py  constants.py  models.py  parser.py  store.py
hypokrates/evidence/: __init__.py  builder.py  models.py
hypokrates/faers/: __init__.py  api.py  client.py  constants.py  models.py  parser.py
hypokrates/faers_bulk/: __init__.py  api.py  constants.py  downloader.py  drug_resolver.py  loader.py  models.py  normalizer.py  parser.py  store.py  timeline.py
hypokrates/http/: __init__.py  auth.py  base_client.py  rate_limiter.py  retry.py  settings.py
hypokrates/jader/: __init__.py  api.py  constants.py  downloader.py  mappings.py  models.py  parser.py  store.py
hypokrates/mcp/: __init__.py  __main__.py  server.py
hypokrates/onsides/: __init__.py  api.py  constants.py  downloader.py  models.py  parser.py  store.py
hypokrates/opentargets/: __init__.py  api.py  client.py  constants.py  models.py  parser.py
hypokrates/pharmgkb/: __init__.py  api.py  client.py  constants.py  models.py  parser.py
hypokrates/pubmed/: __init__.py  api.py  classify.py  client.py  constants.py  models.py  parser.py  search.py
hypokrates/scan/: __init__.py  api.py  class_compare.py  clusters.py  constants.py  indications.py  models.py
hypokrates/stats/: __init__.py  api.py  constants.py  measures.py  models.py
hypokrates/store/: base.py
hypokrates/trials/: __init__.py  api.py  client.py  constants.py  models.py  parser.py
hypokrates/utils/: __init__.py  result.py  time.py  validation.py
hypokrates/vocab/: __init__.py  api.py  constants.py  drug_synonyms.py  meddra.py  mesh_client.py  models.py  parser.py  rxnorm_client.py
openalex/: __init__.py
pubmed/: __init__.py
tests/: conftest.py  helpers.py  test_cli.py  test_sync.py
tests/benchmark/: registry.py  test_benchmark.py
tests/test_anvisa/: __init__.py  test_api.py  test_downloader.py  test_parser.py  test_store.py
tests/test_cache/: test_duckdb_store.py  test_keys.py  test_policies.py
tests/test_canada/: test_api.py  test_downloader.py  test_models.py  test_store.py
tests/test_chembl/: test_api.py  test_client.py  test_models.py  test_parser.py
tests/test_config/: test_config.py
trials/: __init__.py
who/: __init__.py
(+161 files in other folders)
