[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypokrates"
version = "0.1.0"
description = "Normalize and cross-reference global public health data for medical hypothesis generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bruno Escalhão" },
]
keywords = [
    "pharmacovigilance",
    "faers",
    "adverse-events",
    "drug-safety",
    "medical-data",
    "mcp",
    "hypothesis-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "duckdb>=1.0,<2",
    "pydantic>=2.7,<3",
    "scipy>=1.13,<2",
]

[project.optional-dependencies]
trials = [
    "curl_cffi>=0.7,<1",
]
mcp = [
    "mcp>=1.0,<2",
    "typer>=0.12,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "pytest-timeout>=2.3,<3",
    "respx>=0.21,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3,<4",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.24,<1",
]

[project.urls]
Homepage = "https://github.com/brunoescalhao/hypokrates"
Repository = "https://github.com/brunoescalhao/hypokrates"

[project.scripts]
hypokrates = "hypokrates.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["hypokrates"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "D",    # pydocstyle (Google convention)
]
ignore = [
    "D100",  # missing docstring in public module (scaffold __init__)
    "D104",  # missing docstring in public package
    "D107",  # missing docstring in __init__ (class docstring is enough)
    "D203",  # no-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "TCH"]
"hypokrates/cli.py" = ["B008"]  # typer.Argument/Option in defaults is the official pattern

[tool.ruff.lint.isort]
known-first-party = ["hypokrates"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "duckdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "curl_cffi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hypokrates.mcp.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "hypokrates.cli"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
]
